--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "angular-jwt": "^0.1.11",
     "bootstrap": "^5.3.2",
+    "ng-bootstrap": "^1.6.3",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
